--- a/trax-2020/index.html
+++ b/trax-2020/index.html
@@ -320,9 +320,9 @@
             </nav>
             <div class="side-footer w-100">
                 <ul class="social-icons-simple white top40">
-                    <li><a href="javascript:void(0)"><i class="fab fa-facebook-f"></i> </a> </li>
-                    <li><a href="javascript:void(0)"><i class="fab fa-twitter"></i> </a> </li>
-                    <li><a href="javascript:void(0)"><i class="fab fa-instagram"></i> </a> </li>
+                    <li><a href="https://www.facebook.com/2-Kar-Engr-Coy-NCC-102433731543988/"><i class="fab fa-facebook-f"></i> </a> </li>
+                    <!--<li><a href="javascript:void(0)"><i class="fab fa-twitter"></i> </a> </li>-->
+                    <li><a href="https://www.instagram.com/2_kar_engr_coy_nitk/?igshid=1d0ggpw5dnusc"><i class="fab fa-instagram"></i> </a> </li>
                 </ul>
                 <p class="whitecolor">&copy; <span id="year"></span> 2 KAR ENGR COY NCC. Made With Love by FLYING AND ROBOTICS CLUBS NITK-FARC</p>
             </div>
@@ -344,19 +344,19 @@
                     <img src="images/banner1-1.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina="">
                     <!-- LAYER NR. 1 -->
                     <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['-130','-130','-110','-80']" data-width="none" data-height="none" data-type="text" data-textalign="['center','center','center','center']" data-responsive_offset="on" data-start="1000" data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1500,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
-                        <h1 class="text-capitalize font-xlight whitecolor text-center">The Ultimate</h1>
+                        <h1 class="text-capitalize font-xlight whitecolor text-center">WELCOME TO</h1>
                     </div>
                     <!-- LAYER NR. 2 -->
                     <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['-70','-70','-50','-20']" data-width="none" data-height="none" data-type="text" data-textalign="['center','center','center','center']" data-responsive_offset="on" data-start="1000" data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1500,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
-                        <h1 class="text-capitalize font-bold whitecolor text-center">Creative Business</h1>
+                        <h1 class="text-capitalize font-bold whitecolor text-center">2 KAR ENGR COY NCC</h1>
                     </div>
                     <!-- LAYER NR. 3 -->
                     <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['-10','-10','10','40']" data-width="none" data-height="none" data-type="text" data-textalign="['center','center','center','center']" data-responsive_offset="on" data-start="1500" data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1500,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
-                        <h1 class="text-capitalize font-xlight whitecolor text-center">In Market</h1>
+                        <h1 class="text-capitalize font-xlight whitecolor text-center">NITK</h1>
                     </div>
                     <!-- LAYER NR. 4 -->
                     <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['40','40','60','90']" data-width="none" data-height="none" data-whitespace="nowrap" data-type="text" data-textalign="['center','center','center','center']" data-responsive_offset="on" data-start="2000" data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":1500,"to":"o:1;","delay":2000,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'>
-                        <h4 class="whitecolor font-xlight text-center">The Best Multipurpose Multi Page Template in Market</h4>
+                        <h4 class="whitecolor font-xlight text-center">OUR UNIT</h4>
                     </div>
                 </li>
                 <!-- SLIDE 2 -->
@@ -510,10 +510,10 @@
         </div>
     </div>
     <ul class="social-icons-simple revicon white">
-        <li class="d-table"><a href="javascript:void(0)"><i class="fab fa-facebook-f"></i></a> </li>
-        <li class="d-table"><a href="javascript:void(0)"><i class="fab fa-twitter"></i> </a> </li>
-        <li class="d-table"><a href="javascript:void(0)"><i class="fab fa-linkedin-in"></i> </a> </li>
-        <li class="d-table"><a href="javascript:void(0)"><i class="fab fa-instagram"></i> </a> </li>
+        <li class="d-table"><a href="https://www.facebook.com/2-Kar-Engr-Coy-NCC-102433731543988/"><i class="fab fa-facebook-f"></i></a> </li>
+        <!--<li class="d-table"><a href="javascript:void(0)"><i class="fab fa-twitter"></i> </a> </li>
+        <li class="d-table"><a href="javascript:void(0)"><i class="fab fa-linkedin-in"></i> </a> </li>-->
+        <li class="d-table"><a href="https://www.instagram.com/2_kar_engr_coy_nitk/?igshid=1d0ggpw5dnusc"><i class="fab fa-instagram"></i> </a> </li>
     </ul>
 </section>
 <!--Main Slider ends -->
@@ -524,14 +524,14 @@
             <div id="services-slider" class="owl-carousel">
                 <div class="item">
                     <div class="service-box">
-                        <span class="bottom25"><i class="fa fa-clipboard"></i></span>
+                        <span class="bottom25"><i class="fa fa-bullhorn"></i></span>
                         <h4 class="bottom10 text-nowrap"><a href="javascript:void(0)">Well Documented</a></h4>
                         <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet</p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="service-box">
-                        <span class="bottom25"><i class="fa fa-laptop"></i></span>
+                        <span class="bottom25"><i class="fa fa-coffee"></i></span>
                         <h4 class="bottom10"><a href="javascript:void(0)">Fully Responsive</a></h4>
                         <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet</p>
                     </div>
@@ -568,9 +568,9 @@
         <div class="row d-flex align-items-center">
             <div class="col-lg-6 col-md-7 col-sm-7 text-sm-left text-center wow fadeInLeft" data-wow-delay="300ms">
                 <div class="heading-title mb-4">
-                    <h2 class="darkcolor font-normal bottom30">Lets take your <span class="defaultcolor">Business</span> to Next Level</h2>
+                    <h2 class="darkcolor font-normal bottom30">About<span class="defaultcolor">NCC</span></h2>
                 </div>
-                <p class="bottom35">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc mauris arcu, lobortis id interdum vitae, interdum eget elit. Curabitur quis urna nulla. Suspendisse potenti. Duis suscipit ultrices maximus. </p>
+                <p class="bottom35">The National Cadet Corps is the Indian military cadet corps with its head Quarters at New Delhi. It is open to school and college students on voluntary basis.The National Cadet Corps in India is a voluntary organization which recruits cadets from high schools, colleges and Universities all over India. The Cadets are given basic military training in small arms and parades. The officers and cadets have no liability for active military service once they complete their course but are given preference over normal candidates during selections based on the achievements in the corps.  </p>
                 <a href="#our-team" class="button btnsecondary gradient-btn pagescroll mb-sm-0 mb-4">Learn More</a>
             </div>
             <div class="col-lg-5 offset-lg-1 col-md-5 col-sm-5 wow fadeInRight" data-wow-delay="300ms">
@@ -1150,7 +1150,7 @@
         <div class="row">
             <div class="col-lg-3 col-md-6 col-sm-6">
                 <div class="footer_panel padding_bottom_half bottom20">
-                    <a href="index.html" class="footer_logo bottom25"><img src="images\logo-transparent.png" alt="MegaOne"></a>
+                    <a href="index.html" class="footer_logo bottom25"><img src="images\ncclogo.png" alt="MegaOne"></a>
                     <p class="whitecolor bottom25">Keep away from people who try to belittle your ambitions Small people always do that but the really great Friendly.</p>
                     <div class="d-table w-100 address-item whitecolor bottom25">
                         <span class="d-table-cell align-middle"><i class="fas fa-mobile-alt"></i></span>
