--- a/trax-2020/pledge.html
+++ b/trax-2020/pledge.html
@@ -333,10 +333,10 @@
         <div class="row">
             <div class="col-lg-8 offset-lg-2">
                 <div class="page-titles whitecolor text-center padding_top padding_bottom">
-                    <h2 class="font-xlight">We Love </h2>
+                    <h2 class="font-xlight"></h2>
                     <h2 class="font-bold">PLEDGE</h2>
-                    <h2 class="font-xlight">Products</h2>
-                    <h3 class="font-light pt-2">The Best Multipurpose Template in Market</h3>
+                    <h2 class="font-xlight"></h2>
+                    <h3 class="font-light pt-2"></h3>
                 </div>
             </div>
         </div>
@@ -359,7 +359,7 @@
 <section id="our-feature" class="single-feature padding">
     <div class="container">
         <div class="row d-flex align-items-center">
-            <div class="text-sm-center text-left wow fadeInLeft" data-wow-delay="300ms">
+            <div class="text-sm-left text-left wow fadeInLeft" data-wow-delay="300ms">
                 <h3 >WE THE CADETS OF THE NATIONAL CADET CORPS,
                     DO SOLOEMNLY PLEDGE THAT WE SHALL ALWAYS UPHOLD THE UNITY OF INDIA.
                     WE RESOLVE TO BE DISCIPLINED AND RESPONSIBLE CITIZEN OF OUR NATION.
