--- a/trax-2020/songhistory.html
+++ b/trax-2020/songhistory.html
@@ -334,7 +334,7 @@
             <div class="col-lg-8 offset-lg-2">
                 <div class="page-titles whitecolor text-center padding_top padding_bottom">
                     <h2 class="font-xlight"></h2>
-                    <h2 class="font-bold">HISTORY OF NCC</h2>
+                    <h2 class="font-bold">HISTORY OF NCC SONG</h2>
                     <h2 class="font-xlight"></h2>
                     <h3 class="font-light pt-2"></h3>
                 </div>
@@ -343,10 +343,10 @@
         <div class="gradient-bg title-wrap">
             <div class="row">
                 <div class="col-lg-12 col-md-12 whitecolor">
-                    <h3 class="float-left">HISTORY OF NCC</h3>
+                    <h3 class="float-left">HISTORY OF NCC SONG</h3>
                     <ul class="breadcrumb top10 bottom10 float-right">
                         <li class="breadcrumb-item hover-light"><a href="index.html">Home</a></li>
-                        <li class="breadcrumb-item hover-light"><a href="moto.html">HISTORY OF NCC</a></li>
+                        <li class="breadcrumb-item hover-light"><a href="moto.html">HISTORY OF NCC SONG</a></li>
                     </ul>
                 </div>
             </div>
@@ -360,9 +360,14 @@
     <div class="container">
         <div class="row d-flex align-items-left">
             <div class="text-sm-left text-left wow fadeInLeft" data-wow-delay="300ms">
-                <h4 >The NCC in India was formed with the National Cadet Corps Act of 1948. It was raised on 15 July 1948 The National Cadet Corps can be considered as a successor of the University Officers Training Corps (UOTC) which was established by the British in 1942. During World War II, the UOTC never came up to the expectations set by the British. This led to the idea that some better schemes should be formed, which could train more young men in a better way, even during peace times. A committee headed by Pandit H.N. Kunzru recommended a cadet organization to be established in schools and colleges at a national level. The National Cadet Corps Act was accepted by the Governor General and on 15 July 1948 the National Cadet Corps came into existence.</h4><br>
-                    <h4>During the 1965 and 1971 wars with Pakistan, NCC cadets were the second line of defence. They organised camps to assist the ordinance factories, supplying arms and ammunition to the front, and also were used as patrol parties to capture the enemy paratroopers. The NCC cadets also worked hand in hand with the Civil Defence authorities and actively took part in rescue work and traffic control. After the 1965 and 1971 Indo-Pak wars the NCC syllabus was revised. Rather than just being the second line of defence, NCC syllabus laid a greater stress on developing qualities of leadership and Officer-like qualities. The military training which the NCC cadets received was reduced and greater importance was given to other areas like social service and youth-management.</h4><br>
-                    
+                <h4 >The desirability of composing a NCC song was considered in the Circle Commanders (now called DDGs) Conference held in January 1956 and all circles were asked to send their proposals. The official song of the NCC – “Kadam Mila Ke Chal” was adopted in 1963, and registered in 1969 with the approval of the Ministry of Defence. In 1974, it was felt that the NCC song had failed to catch the imagination of the youth, and there was a need for a change. A sustained process began; entries were invited from Directorates for suitable lyrics; 107 entries were received; of which eight were selected by a Board of Officers. However, all the eight were considered sub standard by Dr Nagendra of Delhi University, who was the judge. On the suggestion of Dr Nagendra, the task was entrusted to Shri Chiranjit, the Chief Producer, Drama Division, AIR, Delhi.</h4><br>
+                    <h4>The song written by Shri Chiranjit was approved, in 1976. The Maharashtra Directorate was asked to get the song composed and recorded with the help of Shri Raj Kapoor, and the Films Division, Bombay. However, nothing much came out of this exercise as Shri Raj Kapoor was then busy in making his film “Satyam Shivam Sundaram” and the studios of the Films Division were under renovation. Later, Shri Mahinder Singh Bedi, a well known poet of Delhi, was requested to write another song. This effort also proved infructuous. AEC Centre Pachmarhi was also approached, but somehow the matter could not be finalized.</h4><br>
+                    <h4>Almost during the same period and independent of efforts at Directorate General NCC, the Film Division undertook production of a documentary on NCC ‘A Cadet’ s Diary’. The Director of the documentary was looking for a suitable song for the film. He happened to hear the song – ‘Ham Sab Hindi Hain’ which appears to have been first sung at a Youth Festival at Chandigarh, sometime during 1968-69, and introduced it in the documentary film.</h4><br>
+                    <h4>The song was a hit and successive Director Generals (DGs) found it good and played it repeatedly in Republic Day camps. In 1980, the word ‘Hindi’ was substituted with ‘Bhartiya’.</h4><br>
+                    <h4>Come ASIAD (1982), and the NCC got the opportunity to display its potential in the opening ceremony. The Special Organising Committee approved trial recording of the song for recital during the Asian Games Festival. The song was finally recorded in its present form, sometime during Oct 1982, at the Western Outdoor Studio, Delhi with the help of AIR artists, and musicians under overall supervision of Pandit Vijai Raghavan Rao.</h4><br>
+                    <h4>Post ASIAD era in the NCC saw among other events, a well composed musical hit and an inspiring NCC song being played and sung alongwith recorded music; a 16 mm colour film had also been made with title ‘Hum Sab Bhartiya Hain’ of 7½ minutes duration. This film had been telecast twice on national hook up. Other films, ‘Unity and Discipline’; ‘A Cadet’ s Diary, had also used this song prominently. The writer of this song seems to have been lost in oblivion. “No body knows” – said Shri SK Sharma, Joint Director, Armed Forces Film and Photo Division, who was actively involved with the production of documentaries on the NCC. “This song was not written for the NCC, as such, writes Shri Mathur, ex-publicity officer, DGNCC, in his notings on the file. But nobody has claimed it so far. Another noting speaks of Sri Virender Sharma as the lyrics writer, and Sri Vijai Raghavan Rao as the music composer.</h4><br>
+                    <h4>This NCC song is liked by millions of cadets, both past and present, and is sung on all important occasions of the NCC.
+                </h4>
             </div>
         </div>
     </div>
