changed navbar for all made till now

--- a/trax-2020/index.html
+++ b/trax-2020/index.html
@@ -78,25 +78,25 @@
                                             <a class="dropdown-item" href="rank.html">RANKS</a>
                                             <a class="dropdown-item" href="camp.html">CENTRALLY ORGANIZED CAMPS</a>
                                             <a class="dropdown-item" href="training.html">TRAINING</a>
-                                            <a class="dropdown-item" href="faq.html">SOCIAL ACTIVITIES</a>
-                                            <a class="dropdown-item" href="coming-soon.html">CERTIFICATION & EXAMINATION</a>
+                                            <a class="dropdown-item" href="social.html">SOCIAL ACTIVITIES</a>
+                                            <a class="dropdown-item" href="certification.html">CERTIFICATION & EXAMINATION</a>
                                             <a class="dropdown-item" href="coming-soon.html">DG & UNITS</a>
                                         </div>
                                         <div class="col-lg-3 col-md-6 col-sm-12">
                                             <h5 class="dropdown-title bottom10">NATIONAL SYMBOLS</h5>
-                                            <a class="dropdown-item" href="login.html">FLAG</a>
-                                            <a class="dropdown-item" href="register.html">ANTHEM</a>
-                                            <a class="dropdown-item" href="forget-password.html">SONG</a>
-                                            <a class="dropdown-item" href="support.html">EMBLEM</a>
-                                            <a class="dropdown-item" href="login.html">GAME</a>
-                                            <a class="dropdown-item" href="register.html">CALENDER</a>
-                                            <a class="dropdown-item" href="forget-password.html">ANIMAL</a>
-                                            <a class="dropdown-item" href="support.html">BIRD</a>
-                                            <a class="dropdown-item" href="support.html">TREE</a>
-                                            <a class="dropdown-item" href="login.html">FRUIT</a>
-                                            <a class="dropdown-item" href="register.html">FLOWER</a>
-                                            <a class="dropdown-item" href="forget-password.html">RIVER</a>
-                                            <a class="dropdown-item" href="support.html">SYMBOL</a>
+                                            <a class="dropdown-item" href="coming-soon.html">FLAG</a>
+                                            <a class="dropdown-item" href="coming-soon.html">ANTHEM</a>
+                                            <a class="dropdown-item" href="coming-soon.html">SONG</a>
+                                            <a class="dropdown-item" href="coming-soon.html">EMBLEM</a>
+                                            <a class="dropdown-item" href="coming-soon.html">GAME</a>
+                                            <a class="dropdown-item" href="coming-soon.html">CALENDER</a>
+                                            <a class="dropdown-item" href="coming-soon.html">ANIMAL</a>
+                                            <a class="dropdown-item" href="coming-soon.html">BIRD</a>
+                                            <a class="dropdown-item" href="coming-soon.html">TREE</a>
+                                            <a class="dropdown-item" href="coming-soon.html">FRUIT</a>
+                                            <a class="dropdown-item" href="coming-soon.html">FLOWER</a>
+                                            <a class="dropdown-item" href="coming-soon.html">RIVER</a>
+                                            <a class="dropdown-item" href="coming-soon.html">SYMBOL</a>
                                         </div>
                                         
                                     </div>
@@ -107,41 +107,41 @@
                     <li class="nav-item dropdown position-relative">
                         <a class="nav-link dropdown-toggle" href="javascript:void(0)" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">NCC NITK</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="blog-1.html">HISTORY</a>
-                            <a class="dropdown-item" href="blog-2.html">ACTIVITIES</a>
-                            <a class="dropdown-item" href="blog-detail.html">people's message</a>
+                            <a class="dropdown-item" href="coming-soon.html">HISTORY</a>
+                            <a class="dropdown-item" href="coming-soon.html">ACTIVITIES</a>
+                            <a class="dropdown-item" href="coming-soon.html">people's message</a>
                         </div>
                     </li>
                     
                     <li class="nav-item dropdown position-relative">
                         <a class="nav-link dropdown-toggle" href="javascript:void(0)" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> STUDY MATERIAL </a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="blog-1.html">ONE-1</a>
-                            <a class="dropdown-item" href="blog-2.html">TWO-2</a>
-                            <a class="dropdown-item" href="blog-detail.html">THREE-3</a>
-                            <a class="dropdown-item" href="blog-detail.html">FOUR-4</a>
+                            <a class="dropdown-item" href="coming-soon.html">ONE-1</a>
+                            <a class="dropdown-item" href="coming-soon.html">TWO-2</a>
+                            <a class="dropdown-item" href="coming-soon.html">THREE-3</a>
+                            <a class="dropdown-item" href="coming-soon.html">FOUR-4</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown position-relative">
                         <a class="nav-link dropdown-toggle" href="javascript:void(0)" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> ALUMNI </a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="blog-1.html">OFFICER COMMANDING</a>
-                            <a class="dropdown-item" href="blog-2.html">JUNIOR COMMISSIONED OFFICER</a>
-                            <a class="dropdown-item" href="blog-detail.html">NON COMMISSIONED OFFICER</a>
-                            <a class="dropdown-item" href="blog-detail.html">CADETS</a>
+                            <a class="dropdown-item" href="coming-soon.html">OFFICER COMMANDING</a>
+                            <a class="dropdown-item" href="coming-soon.html">JUNIOR COMMISSIONED OFFICER</a>
+                            <a class="dropdown-item" href="coming-soon.html">NON COMMISSIONED OFFICER</a>
+                            <a class="dropdown-item" href="coming-soon.html">CADETS</a>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="gallery.html">Gallery</a>
+                        <a class="nav-link" href="coming-soon.html">Gallery</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
+                        <a class="nav-link" href="coming-soon.html">Contact Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="faq.html">FAQ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">LOGIN</a>
+                        <a class="nav-link" href="coming-soon.html">LOGIN</a>
                     </li>
                 </ul>
             </div>
@@ -162,7 +162,7 @@
                         <a class="nav-link collapsePagesSideMenu" data-toggle="collapse" href="#sideNavPages1">
                             Home <i class="fas fa-chevron-down"></i>
                         </a>
-                        <div id="sideNavPages1" class="collapse sideNavPages">
+                        <!--<div id="sideNavPages1" class="collapse sideNavPages">
                             <ul class="navbar-nav mt-2">
                                 <li class="nav-item">
                                     <a class="nav-link" href="index.html">Standard Version</a>
@@ -370,7 +370,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
-                </ul>
+                </ul>-->
             </nav>
             <div class="side-footer w-100">
                 <ul class="social-icons-simple white top40">
