added few pages

--- a/trax-2020/Aim.html
+++ b/trax-2020/Aim.html
@@ -375,20 +375,28 @@
     <!-- End side menu -->
 </header>
 <!-- header -->
+<!--slider-->
+<section id="home" class="p-0  single-slide">
+    <h2 class="d-none">hidden</h2>
+    <!-- particles.js container -->
+    <div id="particles-js"></div>
+    <div class="part-header parallax parallax-slow"></div>
+    <div class="overlay overlay-dark opacity-8 z-index-n1"></div>
+    <!-- particles.js container -->
+    <div id="particles-text-morph">
+        <h2 class="font-xlight">We Build Creative</h2>
+        <h2 id="morph-text" class="pb-2">Parallax, Optimum, Preferred, Leading</h2>
+        <h3 class="font-light2">Themes With Our Honorable Team</h3>
+    </div>
+    <!--scroll down-->
+    <a href="#our-feature" class="scroll-down pagescroll hover-default">Scroll Down <i class="fas fa-long-arrow-alt-down"></i></a>
+</section>
+<!--slider end-->
 <!--Page Header-->
-<section id="main-banner-page" class="position-relative page-header service-detail-header section-nav-smooth parallax">
+<section id="" class="position-relative page-header service-detail-header section-nav-smooth parallax">
     <div class="overlay overlay-dark opacity-7 z-index-1"></div>
     <div class="container">
-        <div class="row">
-            <div class="col-lg-8 offset-lg-2">
-                <div class="page-titles whitecolor text-center padding_top padding_bottom">
-                    <h2 class="font-xlight"></h2>
-                    <h2 class="font-bold">AIM OF NCC</h2>
-                    <h2 class="font-xlight"></h2>
-                    <h3 class="font-light pt-2"></h3>
-                </div>
-            </div>
-        </div>
+        
         <div class="gradient-bg title-wrap">
             <div class="row">
                 <div class="col-lg-12 col-md-12 whitecolor">
