--- a/trax-2020/rank.html
+++ b/trax-2020/rank.html
@@ -439,7 +439,7 @@
 </section>
 <!--Some Feature ends-->
 <!--Shop detail tabs-->
-<div class="col-md-12 wow fadeInUp" data-wow-delay="300ms">
+<div class="col-md-12 wow fadeInUp padding_bottom_half" data-wow-delay="300ms">
     <div class="tab-to-accordion heading_space">
         <ul class="tabset-list">
            
@@ -512,7 +512,7 @@
 </section>
 <!--Shop Deails-->
 <!--Site Footer Here-->
-<footer id="site-footer" class=" bgdark padding_bottom">
+<footer id="site-footer" class=" bgdark padding">
     <div class="container">
         <div class="row">
             <div class="col-lg-3 col-md-6 col-sm-6">
