--- a/trax-2020/testimonial.html
+++ b/trax-2020/testimonial.html
@@ -373,11 +373,12 @@
                 <div class="testimonial-wrapp">
                     <span class="quoted"><i class="fa fa-quote-right"></i></span>
                     <div class="testimonial-text">
-                        <p class="bottom40">Donec semper euismod nisi quis feugiat. Nullam finibus metus eget orci volutpat porta. Morbi quis arcu vulputate, dignissim mi ac, varius magna.</p>
+                        <p class="bottom40">Yes, the most basic things NCC taught me the discipline. How to sit, walk, talk with different level of people like junior senior and equal. I learnt time management. I remembered the tour of NCC helping  people and nice food offered during any camp and program. I liked the firing in the NCC. The way PI staff deals is amazing. They understand cadets as their own brother. I will always remember their love.<br>Jai Hind!!!</p>
                     </div>
-                    <div class="testimonial-photo"><img alt="" src="images\testimonial-1.jpg"></div>
-                    <h4 class="darkcolor"><a href="#.">David Raleway</a></h4>
-                    <span class="defaultcolor font-11">Businessman</span>
+                    <div class="testimonial-photo"><img alt="" src="images/testimonial/Rishitesh Prajapati.jpg"></div><br>
+                    <span class="defaultcolor font-11">L/CPL</span>
+                    <h4 class="darkcolor"><a href="#."><b>Rishitesh Prajapati</b></a></h4>
+                    <h6 class="darkcolor"><a href="#.">CS,Batch:17-21</a></h6> 
                     <div class="icon mt-2 testimonial-icon">
                         <ul class="social-icons black">
                             <li><a class="facebook" href="javascript:void(0)" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
