addition of few pages

--- a/trax-2020/index.html
+++ b/trax-2020/index.html
@@ -84,9 +84,9 @@
                                         </div>
                                         <div class="col-lg-3 col-md-6 col-sm-12">
                                             <h5 class="dropdown-title bottom10">NATIONAL SYMBOLS</h5>
-                                            <a class="dropdown-item" href="coming-soon.html">FLAG</a>
-                                            <a class="dropdown-item" href="coming-soon.html">ANTHEM</a>
-                                            <a class="dropdown-item" href="coming-soon.html">SONG</a>
+                                            <a class="dropdown-item" href="indflag.html">FLAG</a>
+                                            <a class="dropdown-item" href="nationalanthem.html">ANTHEM</a>
+                                            <a class="dropdown-item" href="nationalsong.html">SONG</a>
                                             <a class="dropdown-item" href="coming-soon.html">EMBLEM</a>
                                             <a class="dropdown-item" href="coming-soon.html">GAME</a>
                                             <a class="dropdown-item" href="coming-soon.html">CALENDER</a>
