minor changes to css files

--- a/trax-2020/nationalanthem.html
+++ b/trax-2020/nationalanthem.html
@@ -376,7 +376,7 @@
 </header>
 <!-- header -->
 <!--Page Header-->
-<section id="main-banner-page" class="position-relative page-header service-detail-header section-nav-smooth parallax">
+<section id="main-banner-page" class="position-relative page-header national-anthem-header section-nav-smooth parallax">
     <div class="overlay overlay-dark opacity-7 z-index-1"></div>
     <div class="container">
         <div class="row">
