addition of few pages , UI changes also

--- a/trax-2020/index.html
+++ b/trax-2020/index.html
@@ -87,16 +87,16 @@
                                             <a class="dropdown-item" href="indflag.html">FLAG</a>
                                             <a class="dropdown-item" href="nationalanthem.html">ANTHEM</a>
                                             <a class="dropdown-item" href="nationalsong.html">SONG</a>
-                                            <a class="dropdown-item" href="coming-soon.html">EMBLEM</a>
-                                            <a class="dropdown-item" href="coming-soon.html">GAME</a>
-                                            <a class="dropdown-item" href="coming-soon.html">CALENDER</a>
-                                            <a class="dropdown-item" href="coming-soon.html">ANIMAL</a>
-                                            <a class="dropdown-item" href="coming-soon.html">BIRD</a>
-                                            <a class="dropdown-item" href="coming-soon.html">TREE</a>
-                                            <a class="dropdown-item" href="coming-soon.html">FRUIT</a>
-                                            <a class="dropdown-item" href="coming-soon.html">FLOWER</a>
-                                            <a class="dropdown-item" href="coming-soon.html">RIVER</a>
-                                            <a class="dropdown-item" href="coming-soon.html">SYMBOL</a>
+                                            <a class="dropdown-item" href="nationalemblem.html">EMBLEM</a>
+                                            <a class="dropdown-item" href="nationalgame.html">GAME</a>
+                                            <a class="dropdown-item" href="nationalcalender.html">CALENDER</a>
+                                            <a class="dropdown-item" href="nationalanimal.html">ANIMAL</a>
+                                            <a class="dropdown-item" href="nationalbird.html">BIRD</a>
+                                            <a class="dropdown-item" href="nationaltree.html">TREE</a>
+                                            <a class="dropdown-item" href="nationalfruit.html">FRUIT</a>
+                                            <a class="dropdown-item" href="nationalflower.html">FLOWER</a>
+                                            <a class="dropdown-item" href="nationalriver.html">RIVER</a>
+                                            <a class="dropdown-item" href="nationalsymbol.html">SYMBOL</a>
                                         </div>
                                         
                                     </div>
